Fixed user dashboard 403 issue and admin table scrollbar issue

--- a/resources/sass/custom-style/_shared-styles.scss
+++ b/resources/sass/custom-style/_shared-styles.scss
@@ -394,9 +394,9 @@ body {
     }
 }
 
-.tag-table {
-    .menu-bar__item {
-        position: static;
+.plain-table {
+    .item-edit-link {
+        line-height: 45px;
     }
 }
 
